[package]
name = "hashchain"
version = "0.0.1"
authors = ["AleBuser <4l3bu53r@gmail.com>"]
edition = "2018"

[lib]
name = "local"
path ="src/lib.rs"


[[bin]]
name = "verify"
path = "src/bin/verify.rs"

[[bin]]
name = "genesis"
path = "src/bin/genesis.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iota-lib-rs = "0.4.1"
serde = {version="1.0.110", features = ["derive"] }
serde_derive = "1.0.110"
serde_json = "1.0.53"
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"
actix-rt = "1.0.0"
actix-web = "2.0.0"
clokwerk = "0.3.3"
sha2 = "0.9.1"
rust-crypto = "0.2.36"
hex = "0.4.2"
base64 = "^0.12"
chrono = "0.4.15"